--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -5,8 +5,7 @@
 </head>
 <body>
 	<h1>Welcome admin!</h1>
-	<a href="/user/adduser">Add user</a> | 
-	<a href="/user/userList">UserList</a> | 
+	<a href="/admin/registration">Register New Admin</a> | 
 	<a href="/logout">logout</a>
 
 </body>
