--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -20,10 +20,13 @@
 		</tr>
 		<tr>
 			<td><input type="submit" name="submit" value="Submit"></td>
-			<td></td>
+			
+
 		</tr>
+		
 	</table>
 	</form>
+	<a href="/registration" >Register here</a>
 </fieldset>
 </body>
 </html>
